Bolt Refactor ()
* Removed support for the 3.5 protocol
* Clean Packstream / Bolt separation
* Improved Latency
* Reworked Threading Model
* Meaningful Error Messages
* Improved Testing Harness
* Improved Unit Test Coverage
* Improved Integration Test Coverage

Co-authored-by: Agent Smith <103414894+neo4jagentsmith[bot]@users.noreply.github.com>
Co-authored-by: Gregory Woods <gregory.woods@neo4j.com>
Co-authored-by: Gregory Woods <gregory.woods@neotechnology.com>